--- a/BsDsstar.tex
+++ b/BsDsstar.tex
@@ -394,7 +394,7 @@ Since we take the physical result at $M_{\eta_h}=M_{\eta_b}$, the uncertainty in
 
 \subsection{$h^s_{A_1}(1)$}
 
-The values extracted from correlation function fits for $h^s_{A_1}(1)$, along with quantities required for it's extrapolation to the physical point, are given in Tables \ref{tab:results_BsDsstar} and \ref{tab:results2_BsDsstar}.
+The values extracted from correlation function fits for $h^s_{A_1}(1)$, along with quantities required for its extrapolation to the physical point, are given in Tables \ref{tab:results_BsDsstar} and \ref{tab:results2_BsDsstar}.
 
 \begin{table}
 \begin{center}
@@ -474,7 +474,7 @@ Set & $am_h^{\text{val}}$ & $aM_{H_c}$& $af_{H_c}$& $aM_{\eta_h}$& $aM_{\eta_c}$
 %%       & 0.8 & 0.9422(72) & 1.11787(43) & \\ [0.5ex]
 %%       \hline
 %%     \end{tabular}
-%%     \caption{Values extracted from correlation function fits for $h^s_{A_1}(1)$, along with quantities required for it's extrapolation to the physical point. $h^s_{A_1}(1)$ values are found from eq. \eqref{eq:normalizationsBsDsstar}. $f_{H_c}$  is the $H_c$ decay constant derived from the $H_c$ correlators and Eq. \eqref{eq:decayconstant_pseudoscalar}.  \label{tab:results} }
+%%     \caption{Values extracted from correlation function fits for $h^s_{A_1}(1)$, along with quantities required for its extrapolation to the physical point. $h^s_{A_1}(1)$ values are found from eq. \eqref{eq:normalizationsBsDsstar}. $f_{H_c}$  is the $H_c$ decay constant derived from the $H_c$ correlators and Eq. \eqref{eq:decayconstant_pseudoscalar}.  \label{tab:results} }
 %%   \end{center}
 %% \end{table}
 
@@ -502,7 +502,7 @@ Set & $am_h^{\text{val}}$ & $aM_{H_c}$& $af_{H_c}$& $aM_{\eta_h}$& $aM_{\eta_c}$
 %%       & 0.8 & 1.321647(37) & 0.101714(70) & 1.945698(48) & & \\ [0.5ex]
 %%       \hline
 %%     \end{tabular}
-%%     \caption{Values extracted from correlation function fits for $h^s_{A_1}(1)$, along with quantities required for it's extrapolation to the physical point. $h^s_{A_1}(1)$ values are found from eq. \eqref{eq:normalizationsBsDsstar}. $f_{H_c}$  is the $H_c$ decay constant derived from eq. \eqref{eq:decayconstant_pseudoscalar}. \label{tab:results2} }
+%%     \caption{Values extracted from correlation function fits for $h^s_{A_1}(1)$, along with quantities required for its extrapolation to the physical point. $h^s_{A_1}(1)$ values are found from eq. \eqref{eq:normalizationsBsDsstar}. $f_{H_c}$  is the $H_c$ decay constant derived from eq. \eqref{eq:decayconstant_pseudoscalar}. \label{tab:results2} }
 %%   \end{center}
 %% \end{table}
 
