--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,4 +1,47 @@
 
+
+@article{PhysRevLett.19.1264,
+  title = {A Model of Leptons},
+    author = {Weinberg, Steven},
+      journal = {Phys. Rev. Lett.},
+        volume = {19},
+	  issue = {21},
+	    pages = {1264--1266},
+	      numpages = {0},
+	        year = {1967},
+		  month = {Nov},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.19.1264},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.19.1264}
+			}
+
+
+@article{Salam:1968rm,
+      author         = "Salam, Abdus",
+            title          = "{Weak and Electromagnetic Interactions}",
+	          booktitle      = "{8th Nobel Symposium Lerum, Sweden, May 19-25, 1968}",
+		        journal        = "Conf. Proc.",
+			      volume         = "C680519",
+			            year           = "1968",
+				          pages          = "367-377",
+					        SLACcitation   = "%%CITATION = CONFP,C680519,367;%%"
+						}
+						
+
+@article{Giudice:2008bi,
+      author         = "Giudice, Gian Francesco",
+            title          = "{Naturally Speaking: The Naturalness Criterion and
+                        Physics at the LHC}",
+			      year           = "2008",
+			            pages          = "155-178",
+				          doi            = "10.1142/9789812779762_0010",
+					        eprint         = "0801.2562",
+						      archivePrefix  = "arXiv",
+						            primaryClass   = "hep-ph",
+							          SLACcitation   = "%%CITATION = ARXIV:0801.2562;%%"
+								  }
+								  
+
 @article{Hughes:2017spc,
       author         = "Hughes, C. and Davies, C. T. H. and Monahan, C. J.",
             title          = "{New methods for B meson decay constants and form factors
@@ -2381,6 +2424,8 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 						            SLACcitation   = "%%CITATION = ARXIV:1812.11639;%%"
 							    }
 
+
+
 @article{Gray:2005ur,
       author         = "Gray, A. and Allison, I. and Davies, C. T. H. and Dalgic,
                         Emel and Lepage, G. P. and Shigemitsu, J. and Wingate, M.",
@@ -4247,6 +4292,24 @@ primaryClass   = "hep-lat",
 reportNumber   = "DAMTP-2013-14",
 SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 }
+
+
+@article{McNeile:2010ji,
+      author         = "McNeile, C. and Davies, C. T. H. and Follana, E. and
+                        Hornbostel, K. and Lepage, G. P.",
+			      title          = "{High-Precision c and b Masses, and QCD Coupling from
+                        Current-Current Correlators in Lattice and Continuum QCD}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D82",
+				          year           = "2010",
+					        pages          = "034512",
+						      doi            = "10.1103/PhysRevD.82.034512",
+						            eprint         = "1004.4285",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = ARXIV:1004.4285;%%"
+									      }
+									      
 
 @article{Donald:2012ga,
       author         = "Donald, G. C. and Davies, C. T. H. and Dowdall, R. J. and
@@ -9315,3 +9378,578 @@ url = "http://www.sciencedirect.com/science/article/pii/0370269384915867",
 author = "F.E. Close and G.J. Gounaris and J.E. Paschalis",
 abstract = "Using the non-relativistic quark model and including perturbative QCD corrections to first non-trivial order, we find that exclusive semileptonic decays of bottom mesons satisfy 0.3 < Γ(B → Dℓν)/Γ(B → D∗ℓν) < 0.5. For charmed meson decays, no corresponding prediction can be made for the ratio Γ(D → Kℓν)/Γ(D → K∗ℓν) other than that K dominates over K∗, whereas for top decays B∗ dominates over B."
 }
+
+@article{GRONAU1991172,
+title = "On determining a weak phase from charged B decay asymmetries",
+journal = "Physics Letters B",
+volume = "265",
+number = "1",
+pages = "172 - 176",
+year = "1991",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(91)90034-N",
+url = "http://www.sciencedirect.com/science/article/pii/037026939190034N",
+author = "Michael Gronau and Daniel Wyler",
+}
+
+@article{GRONAU1991483,
+title = "How to determine all the angles of the unitarity triangle from $B_d^0 \to DK_s$ and $B_s^0 \to D\phi$",
+journal = "Physics Letters B",
+volume = "253",
+number = "3",
+pages = "483 - 488",
+year = "1991",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(91)91756-L",
+url = "http://www.sciencedirect.com/science/article/pii/037026939191756L",
+author = "Michael Gronau and David London",
+}
+
+
+
+@article{Allison:2008xk,
+      author         = "Allison, I. and others",
+            title          = "{High-Precision Charm-Quark Mass from Current-Current
+                        Correlators in Lattice and Continuum QCD}",
+			      collaboration  = "HPQCD",
+			            journal        = "Phys. Rev.",
+				          volume         = "D78",
+					        year           = "2008",
+						      pages          = "054513",
+						            doi            = "10.1103/PhysRevD.78.054513",
+							          eprint         = "0805.2999",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            reportNumber   = "BNL-HET-08-11, TTP08-18, SFB-CPP-08-28",
+										          SLACcitation   = "%%CITATION = ARXIV:0805.2999;%%"
+											  }
+
+
+@article{Davies:2010ip,
+      author         = "Davies, C. T. H. and McNeile, C. and Follana, E. and
+                        Lepage, G. P. and Na, H. and Shigemitsu, J.",
+			      title          = "{Update: Precision $D_s$ decay constant from full lattice
+                        QCD using very fine lattices}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D82",
+				          year           = "2010",
+					        pages          = "114504",
+						      doi            = "10.1103/PhysRevD.82.114504",
+						            eprint         = "1008.4018",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = ARXIV:1008.4018;%%"
+									      }
+
+@article{Kronfeld:2007ek,
+      author         = "Kronfeld, Andreas S.",
+            title          = "{Lattice Gauge Theory with Staggered Fermions: How,
+                        Where, and Why (Not)}",
+			      booktitle      = "{Proceedings, 25th International Symposium on Lattice
+                        field theory  (Lattice 2007): Regensburg, Germany, July
+                        30-August 4, 2007}",
+			      journal        = "PoS",
+			            volume         = "LATTICE2007",
+				          year           = "2007",
+					        pages          = "016",
+						      doi            = "10.22323/1.042.0016",
+						            eprint         = "0711.0699",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      reportNumber   = "FERMILAB-CONF-07-592-T",
+									            SLACcitation   = "%%CITATION = ARXIV:0711.0699;%%"
+										    }
+
+@article{Sharpe:2006re,
+      author         = "Sharpe, Stephen R.",
+            title          = "{Rooted staggered fermions: Good, bad or ugly?}",
+	          booktitle      = "{Proceedings, 24th International Symposium on Lattice
+                        Field Theory (Lattice 2006): Tucson, USA, July 23-28,
+                        2006}",
+			      journal        = "PoS",
+			            volume         = "LAT2006",
+				          year           = "2006",
+					        pages          = "022",
+						      doi            = "10.22323/1.032.0022",
+						            eprint         = "hep-lat/0610094",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = HEP-LAT/0610094;%%"
+									      }
+
+@article{Durr:2012te,
+      author         = "Durr, Stephan",
+            title          = "{Physics of $\eta'$ with rooted staggered quarks}",
+	          journal        = "Phys. Rev.",
+		        volume         = "D85",
+			      year           = "2012",
+			            pages          = "114503",
+				          doi            = "10.1103/PhysRevD.85.114503",
+					        eprint         = "1203.2560",
+						      archivePrefix  = "arXiv",
+						            primaryClass   = "hep-lat",
+							          SLACcitation   = "%%CITATION = ARXIV:1203.2560;%%"
+
+}
+
+@article{Follana:2004sz,
+      author         = "Follana, E. and Hart, A. and Davies, C. T. H.",
+            title          = "{The Index theorem and universality properties of the
+                        low-lying eigenvalues of improved staggered quarks}",
+			      collaboration  = "HPQCD, UKQCD",
+			            journal        = "Phys. Rev. Lett.",
+				          volume         = "93",
+					        year           = "2004",
+						      pages          = "241601",
+						            doi            = "10.1103/PhysRevLett.93.241601",
+							          eprint         = "hep-lat/0406010",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            SLACcitation   = "%%CITATION = HEP-LAT/0406010;%%"
+										    }
+
+@article{Donald:2011if,
+      author         = "Donald, Gordon C. and Davies, Christine T. H. and
+                        Follana, Eduardo and Kronfeld, Andreas S.",
+			      title          = "{Staggered fermions, zero modes, and flavor-singlet
+                        mesons}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D84",
+				          year           = "2011",
+					        pages          = "054504",
+						      doi            = "10.1103/PhysRevD.84.054504",
+						            eprint         = "1106.2412",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      reportNumber   = "FERMILAB-PUB-11-305-T",
+									            SLACcitation   = "%%CITATION = ARXIV:1106.2412;%%"
+										    }
+
+@article{Parisi:1983ae,
+      author         = "Parisi, G.",
+            title          = "{The Strategy for Computing the Hadronic Mass Spectrum}",
+	          booktitle      = "{COMMON TRENDS IN PARTICLE AND CONDENSED MATTER PHYSICS.
+                        PROCEEDINGS, WINTER ADVANCED STUDY INSTITUTE, LES HOUCHES,
+                        FRANCE, FEBRUARY 23 - MARCH 11, 1983}",
+			      journal        = "Phys. Rept.",
+			            volume         = "103",
+				          year           = "1984",
+					        pages          = "203-211",
+						      doi            = "10.1016/0370-1573(84)90081-4",
+						            reportNumber   = "LNF-83-36-P",
+							          SLACcitation   = "%%CITATION = PRPLC,103,203;%%"
+}
+
+@inproceedings{Lepage:1989hd,
+      author         = "Lepage, G. Peter",
+            title          = "{The Analysis of Algorithms for Lattice Field Theory}",
+	          booktitle      = "{Boulder ASI 1989:97-120}",
+		        year           = "1989",
+			      pages          = "97-120",
+			            reportNumber   = "CLNS-89-971",
+				          SLACcitation   = "%%CITATION = CLNS-89-971;%%"
+					  }
+					  
+
+
+@article{GLASHOW1961579,
+title = "Partial-symmetries of weak interactions",
+journal = "Nuclear Physics",
+volume = "22",
+number = "4",
+pages = "579 - 588",
+year = "1961",
+issn = "0029-5582",
+doi = "https://doi.org/10.1016/0029-5582(61)90469-2",
+url = "http://www.sciencedirect.com/science/article/pii/0029558261904692",
+author = "Sheldon L. Glashow",
+abstract = "Weak and electromagnetic interactions of the leptons are examined under the hypothesis that the weak interactions are mediated by vector bosons. With only an isotopic triplet of leptons coupled to a triplet of vector bosons (two charged decay-intermediaries and the photon) the theory possesses no partial-symmetries. Such symmetries may be established if additional vector bosons or additional leptons are introduced. Since the latter possibility yields a theory disagreeing with experiment, the simplest partially-symmetric model reproducing the observed electromagnetic and weak interactions of leptons requires the existence of at least four vector-boson fields (including the photon). Corresponding partially-conserved quantities suggest leptonic analogues to the conserved quantities associated with strong interactions: strangeness and isobaric spin."
+}
+
+@article{PhysRevLett.13.321,
+  title = {Broken Symmetry and the Mass of Gauge Vector Mesons},
+    author = {Englert, F. and Brout, R.},
+      journal = {Phys. Rev. Lett.},
+        volume = {13},
+	  issue = {9},
+	    pages = {321--323},
+	      numpages = {0},
+	        year = {1964},
+		  month = {Aug},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.13.321},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.321}
+			}
+
+
+@article{PhysRevLett.13.508,
+  title = {Broken Symmetries and the Masses of Gauge Bosons},
+    author = {Higgs, Peter W.},
+      journal = {Phys. Rev. Lett.},
+        volume = {13},
+	  issue = {16},
+	    pages = {508--509},
+	      numpages = {0},
+	        year = {1964},
+		  month = {Oct},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.13.508},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.508}
+			}
+
+@article{PhysRevLett.13.585,
+  title = {Global Conservation Laws and Massless Particles},
+    author = {Guralnik, G. S. and Hagen, C. R. and Kibble, T. W. B.},
+      journal = {Phys. Rev. Lett.},
+        volume = {13},
+	  issue = {20},
+	    pages = {585--587},
+	      numpages = {0},
+	        year = {1964},
+		  month = {Nov},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.13.585},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.585}
+			}
+
+
+@article{GONZALEZGARCIA20081,
+title = "Phenomenology with massive neutrinos",
+journal = "Physics Reports",
+volume = "460",
+number = "1",
+pages = "1 - 129",
+year = "2008",
+issn = "0370-1573",
+doi = "https://doi.org/10.1016/j.physrep.2007.12.004",
+url = "http://www.sciencedirect.com/science/article/pii/S0370157308000148",
+author = "M.C. Gonzalez-Garcia and Michele Maltoni",
+abstract = "The current status and some perspectives of the phenomenology of massive neutrinos is reviewed. We start with the phenomenology of neutrino oscillations in vacuum and in matter. We summarize the results of neutrino experiments using solar, atmospheric, reactor and accelerator neutrino beams. We update the leptonic parameters derived from the three-neutrino oscillation interpretation of this data. We describe the method and present results on our understanding of the solar and atmospheric neutrino fluxes by direct extraction from the corresponding neutrino event rates. We present some tests of different forms of new physics which induce new sources of leptonic flavor transitions in vacuum and in matter which can be performed with the present neutrino data. The aim and potential of future neutrino experiments and facilities to further advance in these fronts is also briefly summarized. Last, the implications of the LSND observations are discussed, and the status of extended models which could accommodate all flavor-mixing signals is presented in the light of the recent results from MiniBooNE."
+}
+
+@article{Freese:2008cz,
+      author         = "Freese, Katherine",
+            title          = "{Review of Observational Evidence for Dark Matter in the
+                        Universe and in upcoming searches for Dark Stars}",
+			      booktitle      = "{Proceedings, Dark Energy and Dark Matter: Observations
+                        Experiments and Theories: Lyon, France, July 7-11, 2008}",
+			      journal        = "EAS Publ. Ser.",
+			            volume         = "36",
+				          year           = "2009",
+					        pages          = "113-126",
+						      doi            = "10.1051/eas/0936016",
+						            eprint         = "0812.4005",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "astro-ph",
+									      SLACcitation   = "%%CITATION = ARXIV:0812.4005;%%"
+									      }
+
+@article{Riess:1998cb,
+      author         = "Riess, Adam G. and others",
+            title          = "{Observational evidence from supernovae for an
+                        accelerating universe and a cosmological constant}",
+			      collaboration  = "Supernova Search Team",
+			            journal        = "Astron. J.",
+				          volume         = "116",
+					        year           = "1998",
+						      pages          = "1009-1038",
+						            doi            = "10.1086/300499",
+							          eprint         = "astro-ph/9805201",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "astro-ph",
+									            SLACcitation   = "%%CITATION = ASTRO-PH/9805201;%%"
+										    }
+
+@article{Perlmutter:1998np,
+      author         = "Perlmutter, S. and others",
+            title          = "{Measurements of Omega and Lambda from 42 high redshift
+                        supernovae}",
+			      collaboration  = "Supernova Cosmology Project",
+			            journal        = "Astrophys. J.",
+				          volume         = "517",
+					        year           = "1999",
+						      pages          = "565-586",
+						            doi            = "10.1086/307221",
+							          eprint         = "astro-ph/9812133",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "astro-ph",
+									            reportNumber   = "LBNL-41801, LBL-41801",
+										          SLACcitation   = "%%CITATION = ASTRO-PH/9812133;%%"
+											  }
+
+
+@article{Canetti:2012zc,
+      author         = "Canetti, Laurent and Drewes, Marco and Shaposhnikov,
+                        Mikhail",
+			      title          = "{Matter and Antimatter in the Universe}",
+			            journal        = "New J. Phys.",
+				          volume         = "14",
+					        year           = "2012",
+						      pages          = "095012",
+						            doi            = "10.1088/1367-2630/14/9/095012",
+							          eprint         = "1204.4186",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            reportNumber   = "TTK-12-04",
+										          SLACcitation   = "%%CITATION = ARXIV:1204.4186;%%"
+											  }
+
+@article{Wilson:1970ag,
+      author         = "Wilson, Kenneth G.",
+            title          = "{The Renormalization Group and Strong Interactions}",
+	          journal        = "Phys. Rev.",
+		        volume         = "D3",
+			      year           = "1971",
+			            pages          = "1818",
+				          doi            = "10.1103/PhysRevD.3.1818",
+					        reportNumber   = "SLAC-PUB-0807",
+						      SLACcitation   = "%%CITATION = PHRVA,D3,1818;%%"
+						      }
+
+@article{PhysRevD.14.1667,
+  title = {Gauge-symmetry hierarchies},
+    author = {Gildener, Eldad},
+      journal = {Phys. Rev. D},
+        volume = {14},
+	  issue = {6},
+	    pages = {1667--1672},
+	      numpages = {0},
+	        year = {1976},
+		  month = {Sep},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevD.14.1667},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevD.14.1667}
+			}
+
+
+@article{PhysRevD.13.3333,
+  title = {Symmetry breaking and scalar bosons},
+    author = {Gildener, Eldad and Weinberg, Steven},
+      journal = {Phys. Rev. D},
+        volume = {13},
+	  issue = {12},
+	    pages = {3333--3341},
+	      numpages = {0},
+	        year = {1976},
+		  month = {Jun},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevD.13.3333},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevD.13.3333}
+			}
+
+
+@article{PhysRevLett.10.531,
+  title = {Unitary Symmetry and Leptonic Decays},
+    author = {Cabibbo, Nicola},
+      journal = {Phys. Rev. Lett.},
+        volume = {10},
+	  issue = {12},
+	    pages = {531--533},
+	      numpages = {0},
+	        year = {1963},
+		  month = {Jun},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.10.531},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.10.531}
+			}
+
+
+@article{10.1143/PTP.49.652,
+
+    author = {Kobayashi, Makoto and Maskawa, Toshihide},
+
+    title = "{CP-Violation in the Renormalizable Theory of Weak Interaction}",
+
+    journal = {Progress of Theoretical Physics},
+
+    volume = {49},
+
+    number = {2},
+
+    pages = {652-657},
+
+    year = {1973},
+
+    month = {02},
+
+    abstract = "{In a framework of the renormalizable theory of weak interaction, problems of CP-violation are studied. It is concluded that no realistic models of CP-violation exist in the quartet scheme without introducing any other new fields. Some possible models of CP-violation are also discussed.}",
+
+    issn = {0033-068X},
+
+    doi = {10.1143/PTP.49.652},
+
+    url = {https://doi.org/10.1143/PTP.49.652},
+
+    eprint = {http://oup.prod.sis.lan/ptp/article-pdf/49/2/652/5257692/49-2-652.pdf},
+
+}
+
+
+
+@book{Schwartz:2013pla,
+      author         = "Schwartz, Matthew D.",
+            title          = "{Quantum Field Theory and the Standard Model}",
+	          publisher      = "Cambridge University Press",
+		        year           = "2014",
+			      url            = "http://www.cambridge.org/us/academic/subjects/physics/theoretical-physics-and-mathematical-physics/quantum-field-theory-and-standard-model",
+			            ISBN           = "1107034736, 9781107034730",
+				          SLACcitation   = "%%CITATION = INSPIRE-1276589;%%"
+					  }
+
+
+@inproceedings{Fleischer:2006fx,
+      author         = "Fleischer, Robert",
+            title          = "{Flavour Physics and CP Violation}",
+	          booktitle      = "{High-energy physics. Proceedings, European School,
+                        Kitzbuehel, Austria, August 21-September, 2005}",
+			      url            = "http://weblib.cern.ch/abstract?CERN-PH-TH-2006-152",
+			            year           = "2006",
+				          eprint         = "hep-ph/0608010",
+					        archivePrefix  = "arXiv",
+						      primaryClass   = "hep-ph",
+						            reportNumber   = "CERN-PH-TH-2006-152",
+							          SLACcitation   = "%%CITATION = HEP-PH/0608010;%%"
+								  }
+
+
+@article{Brivio:2017vri,
+      author         = "Brivio, Ilaria and Trott, Michael",
+            title          = "{The Standard Model as an Effective Field Theory}",
+	          journal        = "Phys. Rept.",
+		        volume         = "793",
+			      year           = "2019",
+			            pages          = "1-98",
+				          doi            = "10.1016/j.physrep.2018.11.002",
+					        eprint         = "1706.08945",
+						      archivePrefix  = "arXiv",
+						            primaryClass   = "hep-ph",
+							          SLACcitation   = "%%CITATION = ARXIV:1706.08945;%%"
+								  }
+
+
+ Hep :: HepNames :: Institutions :: Conferences :: Jobs :: Experiments :: Journals :: Help
+
+@article{Scherer:2002tk,
+      author         = "Scherer, Stefan",
+            title          = "{Introduction to chiral perturbation theory}",
+	          journal        = "Adv. Nucl. Phys.",
+		        volume         = "27",
+			      year           = "2003",
+			            pages          = "277",
+				          note           = "[,277(2002)]",
+					        eprint         = "hep-ph/0210398",
+						      archivePrefix  = "arXiv",
+						            primaryClass   = "hep-ph",
+							          reportNumber   = "MKPH-T-02-09",
+								        SLACcitation   = "%%CITATION = HEP-PH/0210398;%%"
+									}
+
+
+@inproceedings{Neubert:2005mu,
+      author         = "Neubert, Matthias",
+            title          = "{Effective field theory and heavy quark physics}",
+	          booktitle      = "{Physics in D >= 4. Proceedings, Theoretical Advanced
+                        Study Institute in elementary particle physics, TASI 2004,
+                        Boulder, USA, June 6-July 2, 2004}",
+			      year           = "2005",
+			            pages          = "149-194",
+				          doi            = "10.1142/9789812773579_0004",
+					        eprint         = "hep-ph/0512222",
+						      archivePrefix  = "arXiv",
+						            primaryClass   = "hep-ph",
+							          reportNumber   = "CLNS-05-1949",
+								        SLACcitation   = "%%CITATION = HEP-PH/0512222;%%"
+									}
+
+
+@article{LUKE1990447,
+title = "Effects of subleading operators in the heavy quark effective theory",
+journal = "Physics Letters B",
+volume = "252",
+number = "3",
+pages = "447 - 455",
+year = "1990",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(90)90568-Q",
+url = "http://www.sciencedirect.com/science/article/pii/037026939090568Q",
+author = "Michael E. Luke",
+abstract = "The heavy quark effective theory is a powerful approach for calculating form factors for hadronic processes involving heavy (c and b) quarks. In this note, we investigate the leading order effects of the finite charm quark mass on semileptonic B decays and cc production. We find that the matrix elements of dimension-four operators suppressed by one power of ΛQCDmc in the weak hadronic current may be parameterized by a single new non-perturbative function and one unknown dimensionful constant. Dimension-five operators in the effective lagrarian which break the spin-flavour SU(4) of the lowest order lagrangian introduce corrections of the same order of magnitude; these require the introduction of three more non-perturbative form factors. However, when the initial and final velocities of the heavy quark are equal, the ΛQCDmc corrections vanish and the absolutely normalized lowest order predictions remain valid."
+}
+
+@article{PhysRevLett.13.264,
+  title = {Nonrenormalization Theorem for the Strangeness-Violating Vector Currents},
+    author = {Ademollo, M. and Gatto, R.},
+      journal = {Phys. Rev. Lett.},
+        volume = {13},
+	  issue = {7},
+	    pages = {264--266},
+	      numpages = {0},
+	        year = {1964},
+		  month = {Aug},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.13.264},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.264}
+			}
+
+
+@inproceedings{Brambilla:2000cs,
+      author         = "Brambilla, Nora",
+            title          = "{A Short introduction to nonrelativistic effective field
+                        theories}",
+			      booktitle      = "{Proceedings, 23rd International Workshop on the
+                        Fundamental Problems of High Energy Physics and Field
+                        Theory: Protvino, Russia, June 21-23, 2000}",
+			      year           = "2000",
+			            eprint         = "hep-ph/0012026",
+				          archivePrefix  = "arXiv",
+					        primaryClass   = "hep-ph",
+						      reportNumber   = "HD-THEP-00-58",
+						            SLACcitation   = "%%CITATION = HEP-PH/0012026;%%"
+							    }
+
+@article{CASWELL1986437,
+title = "Effective lagrangians for bound state problems in QED, QCD, and other field theories",
+journal = "Physics Letters B",
+volume = "167",
+number = "4",
+pages = "437 - 442",
+year = "1986",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(86)91297-9",
+url = "http://www.sciencedirect.com/science/article/pii/0370269386912979",
+author = "W.E. Caswell and G.P. Lepage",
+abstract = "A renormalization group strategy for the study of bound states in field theory is developed. Our analysis is completely different from conventional analyses, based upon the Bethe-Salpeter equation, and it is far simpler. This is illustrated in state-of-the-art calculations for the ground state splittings in muonium and positronium."
+}
+
+@article{Bodwin:1994jh,
+      author         = "Bodwin, Geoffrey T. and Braaten, Eric and Lepage, G.
+                        Peter",
+			      title          = "{Rigorous QCD analysis of inclusive annihilation and
+                        production of heavy quarkonium}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D51",
+				          year           = "1995",
+					        pages          = "1125-1171",
+						      doi            = "10.1103/PhysRevD.55.5853, 10.1103/PhysRevD.51.1125",
+						            note           = "[Erratum: Phys. Rev.D55,5853(1997)]",
+							          eprint         = "hep-ph/9407339",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ph",
+									            reportNumber   = "ANL-HEP-PR-94-24, FERMILAB-PUB-94-073-T, NUHEP-TH-94-5",
+										          SLACcitation   = "%%CITATION = HEP-PH/9407339;%%"
+											  }
+
+
+@article{Georgi:1990um,
+      author         = "Georgi, Howard",
+            title          = "{An Effective Field Theory for Heavy Quarks at
+                        Low-energies}",
+			      journal        = "Phys. Lett.",
+			            volume         = "B240",
+				          year           = "1990",
+					        pages          = "447-450",
+						      doi            = "10.1016/0370-2693(90)91128-X",
+						            reportNumber   = "HUTP-90/A007",
+							          SLACcitation   = "%%CITATION = PHLTA,B240,447;%%"
+								  }
+								  
